updating js file

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <i class="fa fa-search"></i>
             <input type="text" name="" id="search-item" placeholder="Search Products" onkeyup="search()">
         </form>
-        <div class="product-list">
+        <div class="product-list" id="product-list">
             <div class="product">
                 <img src="images/show_your_work.jpg" alt="">
                 <div class="p-details">
